Prevent Scrollbars

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ code {
 html, body, #root {
   height: 100%;
   width: 100%;
+  overflow: hidden;
 }
 
 h3 {
